Test 4: Overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   border: 2px;
   max-width: 700px;
   width: 100%;
-  margin: calc(80% - 1rem);
+  margin: auto;
   height: 50vh;
   display: flex;
   align-items:center;
@@ -35,6 +35,7 @@
   overflow: auto;
   justify-content: center;
   overflow: auto;
+  scroll-behavior: none;
   
 }
 
@@ -42,8 +43,7 @@
   margin-top: 30px;
   margin-bottom: auto;
   font-size: 18px;
-  overflow: auto;
-  min-height: 0px;
+  
 }
 
 .containerBox .author-design {
